--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,3 +1,16 @@
+@media (max-width: 1080px) {
+    footer .footer-white .links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    footer .footer-white .links a + a {
+        margin-left: 0;
+    }
+}
+
 @media (max-width: 980px) {
 
     html {
@@ -25,16 +38,7 @@
         display: none;
     }
 
-    footer .footer-white .links {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    footer .footer-white .links a + a {
-        margin-left: 0;
-    }
+   
 }
 
 @media (max-width: 780px) {
@@ -70,15 +74,6 @@
         transition-duration: 0.3s;
     }
 
-    article.media {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-@media (max-width: 520px) {
-
     main div.container {
         flex-direction: column;
         align-items: center;
@@ -90,14 +85,6 @@
         margin-left: 0;
     }
 
-    div.card {
-      flex-grow: 1;
-      margin: 0;
-      margin-bottom: 16px;
-    }
-
-    
-    footer .footer-dark .container,
     footer .footer-white .container {
         max-width: 980px;
         width: 60%;
@@ -105,7 +92,7 @@
         align-items: center;
         justify-content: center;
     }
-
+    
     footer .footer-white .footer-white-start {
         flex-direction: column;
         align-items: center;
@@ -125,6 +112,18 @@
         margin-top: 8px;
     }
 
+}
+
+@media (max-width: 620px) {
+    footer .footer-dark .container {
+        max-width: 980px;
+        width: 60%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    
     footer .footer-dark .links {
         display: flex;
         flex-direction: column;
@@ -135,5 +134,19 @@
     footer .footer-dark .links a + a {
         margin: 8px 0 24px;
     }
+}
 
+@media (max-width: 520px) {
+
+      article.media {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    div.card {
+      flex-grow: 1;
+      margin: 0;
+      margin-bottom: 16px;
+    }
 }
