--- a/public/css/header.css
+++ b/public/css/header.css
@@ -13,31 +13,31 @@ header.navbar .container {
     justify-content: flex-start;
 }
 
-header.navbar .container .navbar-brand {
+header.navbar .container .navbar-start {
     display: flex;
     align-items: center;
 }
 
-header.navbar .container .menu-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
-
-header.navbar .container .menu-section .navbar-body {
+header.navbar .container .navbar-end {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
 }
 
-header.navbar .container .menu-section .navbar-body  img{
+header.navbar .container .navbar-end .navbar-body {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+header.navbar .container .navbar-end .navbar-body  img{
     display: none;
     opacity: 0;
 }
 
-header.navbar .container .menu-section .navbar-body  h1{
+header.navbar .container .navbar-end .navbar-body  h1{
     font-weight: bold;
     font-size: 2.4rem;
     line-height: 3.4rem;
@@ -45,33 +45,49 @@ header.navbar .container .menu-section .navbar-body  h1{
     text-transform: uppercase;
 }
 
-header.navbar .menu-section .navbar-body input {
+header.navbar .navbar-end .navbar-body .navbar-search {
+    position: relative;
+    width: 100%;
+    margin: 0 80px;
+}
+
+header.navbar .navbar-end .navbar-body .navbar-search button {
+    position:absolute;
+    top:4px; 
+    right:30px;
+    z-index:10;
+    border:none;
+    background:transparent;
+    outline:none;
+    color: white;
+    cursor: pointer;
+}
+
+header.navbar .navbar-end .navbar-body .navbar-search input {
     background-color: transparent;
+    width: 100%;
     border: 1px solid white;
     border-radius: 40px;
-    width: 100%;
     padding: 8px 32px;
     color: white;
     outline: none;
-    width: 100%;
-    margin: 0 80px;
     text-transform: uppercase;
 }
 
-header.navbar .menu-section .navbar-body input::placeholder {
+header.navbar .navbar-end .navbar-body input::placeholder {
     color: white;
     text-transform: uppercase;
     font-weight: 500;
 }
 
-header.navbar .menu-section .navbar-body button {
+header.navbar .navbar-end .navbar-body button {
     font-weight: 600;
 }
 
 
 /* === NAVBAR ACTIVE === */
 
-header.navbar .container .menu-section.active {
+header.navbar .container .navbar-end.active {
     position: absolute;
     top: 0;
     right: 0;
@@ -82,49 +98,54 @@ header.navbar .container .menu-section.active {
     transition: all 0.9ms linear;
 }
 
-header.navbar .container .menu-section.active .navbar-body {
+header.navbar .container .navbar-end.active .navbar-body {
     display: flex;
     height: 100%;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: start;
     padding: 100px 20px;
     transition-duration: 0.3ms;
 }
 
-header.navbar .container .menu-section.active .navbar-body img {
+header.navbar .container .navbar-end.active .navbar-body img {
     margin-bottom: 50px;
     display: initial;
     opacity: 1;
+    align-self: center;
 }
 
-header.navbar .container .menu-section.active .navbar-body h1 {
+header.navbar .container .navbar-end.active .navbar-body .navbar-search {
+    margin: 0;
+}
+
+header.navbar .container .navbar-end.active .navbar-body h1 {
     display: none;
     opacity: 0;
 }
 
-header.navbar .container .menu-section.active .navbar-body button{
-    width: 100%;
+header.navbar .container .navbar-end.active .navbar-body button.button{
     margin-top: 16px;
+    width: 100%;
 }
 
 
 /* === NAVBAR BURGUER ACTIVE === */
 
-header.navbar .container .menu-section.active .menu-toggle {
+header.navbar .container .navbar-end.active .navbar-burguer {
     position: absolute;
     right: 20px;
     top: 10px;
 }
 
-header.navbar .container .menu-section.active .menu-toggle .one {
+header.navbar .container .navbar-end.active .navbar-burguer .one {
     transform: rotate(45deg) translate(7px, 7px);
 }
 
-header.navbar .container .menu-section.active .menu-toggle .two {
+header.navbar .container .navbar-end.active .navbar-burguer .two {
     opacity: 0;
 }
 
-header.navbar .container .menu-section.active .menu-toggle .three {
+header.navbar .container .navbar-end.active .navbar-burguer .three {
     transform: rotate(-45deg) translate(7px, -8px);
 }
